fix positions on mobile nav bar

--- a/app/assets/stylesheets/module/_nav-mobile.scss
+++ b/app/assets/stylesheets/module/_nav-mobile.scss
@@ -67,7 +67,9 @@
     top: 4px;
 
     @include breakpoint(tablet){
-      margin-left: 17px;
+      margin-left: 15px;
+      font-size: 21px;
+      top: -11px;
     }
   }
 
@@ -102,7 +104,7 @@
       width: 387px;
     }
 
-    .icon-search{
+    .icon-search-2{
       color: #F20892;
       position: absolute;
       right: 13px;
